Основная реализация 1 задачи + someTests + Transfer from notebook